feat(java-sdk): support Java 17 and Spring Boot 2-3 starter compatibility
Lower the Java SDK bytecode target to Java 17, compile the Spring integration against Spring Framework 5.3/Spring Boot 2.7 public APIs, and publish both Boot 2 spring.factories and Boot 2.7+/3 AutoConfiguration.imports metadata. Keep the demo on Spring Boot 3.x to validate the single starter against Boot 3 without splitting packages.\n\nConstraint: Java SDK must run on Java 17+ and support Spring Boot 2.x/3.x without carrying avoidable duplicate starter modules.\nRejected: Splitting separate Boot 2 and Boot 3 starters | The current auto-configuration only needs common Boot 2.7/Spring 5.3 APIs and can use dual metadata entries.\nConfidence: high\nScope-risk: moderate\nDirective: Do not reintroduce Java 21 APIs such as List.getFirst into SDK sources while release stays 17.\nTested: cd sdks/java && ./gradlew clean test --no-daemon; cd examples/java/spring-worker-demo && ./gradlew clean test --no-daemon; cd sdks/java && ./gradlew :tikee-spring-boot-starter:test --tests com.yhyzgn.tikee.boot.autoconfigure.TikeeWorkerAutoConfigurationTest --no-daemon; grep Java 21 API/version drift; git diff --check